<resources>
    <string name="app_name">Hex_idea</string>
    <string name="icon_home">Home</string>
    <string name="icon_rating">Champions</string>
    <string name="icon_idea">Myidea</string>
    <string name="icon_account">Account</string>
    <string name="icon_share">share</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to Login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">settings</string>
    <string name="icon_add">add</string>
    <string name="register">Register</string>
    <string name="action_aboutus">Aboutus</string>
    <string name="action_logout">Logout</string>
    <string name="category_prompt">selectcategory</string>
    <string name="btnRecordVideo">Upload Picture</string>
    <string name="or">or</string>
    <string name="btnTakePicture">TakePicture</string>
    <string-array name="category">
        <item>Technical</item>
        <item>Business</item>
        <item>HumanResource</item>
    </string-array>
</resources>
