<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/home"
        android:enabled="true"
        android:title="@string/icon_home"
        android:icon="@drawable/home"
        app:showAsAction="always" />
    <item
        android:id="@+id/champ"
        android:enabled="true"
        android:icon="@drawable/star"
        android:title="@string/icon_rating"
        app:showAsAction="always" />
    <item
        android:id="@+id/myidea"
        android:enabled="true"
        android:title="@string/icon_idea"
        android:icon="@drawable/idea"
        app:showAsAction="always" />
    <item
        android:id="@+id/account"
        android:enabled="true"
        android:title="@string/icon_account"
        android:icon="@drawable/acc"
        app:showAsAction="always" />


</menu>